# waifu-cli

./: .gitignore  Cargo.toml  Cevio.ps1  speak.py  waifu-shell.ps1
src/: main.rs  rainbow_mod.rs  utils.rs  waifu.json  waifu_cat.rs  waifu_cd.rs  waifu_clear.rs  waifu_echo.rs  waifu_ls.rs  waifu_ping.rs  waifu_ps.rs
